Add cert modal; multiple layout tweaks

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Shea Riley - Web Developer and Architect</title>
   </head>
   <body class="prose max-w-none">
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
